<resources>
    <string name="app_name">Geo Final Project</string>
    <string name="title_activity_maps">GeoAlerts!</string>
    <string name="list_of_geomarkers">List of geomarkers</string>
    <string name="allow_location_updates">Allow location updates</string>
    <string name="logout">Logout</string>
    <string name="menu_camera" />
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="my_places">My markers</string>
    <string name="account">Account</string>
    <string name="places">Places</string>
    <string name="create_marker">Create marker</string>
    <string name="user_email">User email</string>
    <string name="user_name">User name</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Create an account</string>
    <string name="marker_type">Marker type</string>
    <string name="marker_name">Marker name</string>
    <string name="marker_description">Marker description</string>
    <string name="latitude_longitude">Latitude, Longitude</string>
    <string name="empty_list">Woah, such emptiness… Come back once you create any markers</string>
    <string name="saved_markers">Saved markers</string>
    <string name="create_a_new_marker">Create a new marker.</string>
    <string name="warning">Warning</string>
    <string name="save_marker">Save marker</string>
    <string name="delete_marker">Delete marker</string>
</resources>