<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/adorno"
        android:layout_width="60dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/primaryLightColor" />

    <TextView
        android:id="@+id/bottom_sheet_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adorno"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/quicksand_semibold"
        android:text="@string/marker_name" />

    <TextView
        android:id="@+id/bottom_sheet_latlng"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_sheet_title"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/latitude_longitude" />

    <TextView
        android:id="@+id/bottom_sheet_description"
        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_sheet_latlng"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/marker_description"
        android:textAlignment="textStart" />

    <ImageView
        android:id="@+id/bottom_sheet_type_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/bottom_sheet_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/marker_type"
        android:minWidth="36dp"
        android:minHeight="36dp"
        android:src="@drawable/ic_warning" />

    <TextView
        android:id="@+id/bottom_sheet_type_text"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/bottom_sheet_description"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/bottom_sheet_type_image"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="center_vertical"
        android:minHeight="36dp"
        android:text="@string/marker_type"
        android:textAllCaps="true" />

    <include
        android:id="@+id/bottom_sheet_save_button"
        layout="@layout/progress_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_sheet_type_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</RelativeLayout>