<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/markers_list_recycler_view_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="12dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/list_item_marker_type"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/marker_type"
            android:maxWidth="56dp"
            android:maxHeight="56dp"
            android:minWidth="36dp"
            android:minHeight="36dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginVertical="8dp"
            android:layout_toEndOf="@id/list_item_marker_type"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_item_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/marker_name"/>

            <TextView
                android:id="@+id/list_item_description"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/quicksand_regular"
                android:maxLines="2"
                android:text="@string/marker_description"/>

        </LinearLayout>


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>