<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.registration.RegisterActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/form_register_text"
        android:layout_centerHorizontal="true"
        android:layout_margin="26dp"
        android:contentDescription="@string/app_name"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_app_icon" />

    <TextView
        android:id="@+id/form_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/form_register_username"
        android:layout_margin="16dp"
        android:text="@string/create_account"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_register_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/prompt_email"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeErrorColor="@color/design_default_color_error"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="You will have to provide a valid email!"
        app:helperTextEnabled="true"
        app:startIconContentDescription="@string/prompt_email"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:minWidth="88dp"
            android:minHeight="56dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_register_username"
        android:hint="@string/prompt_password"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeErrorColor="@color/design_default_color_error"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="The password must contain at least 5 characters!"
        app:helperTextEnabled="true"
        app:startIconContentDescription="@string/prompt_email"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minWidth="88dp"
            android:minHeight="56dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/form_register_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_register_password"
        android:layout_marginHorizontal="16dp"
        android:visibility="gone"
        app:showAnimationBehavior="inward"
        app:trackCornerRadius="5dp"/>

    <TextView
        android:id="@+id/form_register_strength_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_register_progress_bar"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/form_register_submit"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_register_strength_indicator"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:enabled="false"
        android:text="@string/register" />

    <RelativeLayout
        android:id="@+id/form_register_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#CCFFFFFF"
        android:visibility="gone">
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="visible"
            app:hideAnimationBehavior="inward"
            app:showAnimationBehavior="outward"
            app:trackCornerRadius="2dp"/>
    </RelativeLayout>

</RelativeLayout>